# Tricycle

./: CMakeLists.txt  README.md
prj/ubuntu/: 02_input.csv  Tricycle  clean.sh  makefile.sh
prj/vs2013/: clean.bat  make_sln.bat
prj/vs2013/Release/: 03_input.csv  04_input.csv
prj/vs2013/gnuplot/: wgnuplot-ja.chm  wgnuplot.chm
result/: 01_contour.txt  01_input.csv  01_pose.txt  02_contour.txt  02_pose.txt  03_contour.txt  03_pose.txt  04_contour.txt  04_pose.txt
src/: CMakeLists.txt  Pose.h  Singleton.h  TestTricycle.cpp  TestTricycle.h  Tricycle.cpp  Tricycle.h  VirtualGyro.cpp  VirtualGyro.h  main.cpp  math2.h  pGNUPlot.cpp  pGNUPlot.h  stdafx.cpp
