IF(WIN32)
	SET(CMAKE_FILES_DIRECTORY ${CMAKE_SOURCE_DIR}/prj/vs2013)
ELSE(WIN32)
	SET(CMAKE_FILES_DIRECTORY ${CMAKE_SOURCE_DIR}/prj/ubuntu)
ENDIF(WIN32)

IF(MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4996")
ELSE(MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -D_REENTRANT")
ENDIF(MSVC)

INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/src)
LINK_DIRECTORIES (${CMAKE_SOURCE_DIR}/src)

IF(WIN32)
ADD_EXECUTABLE(Tricycle
	main.cpp
	Tricycle.cpp
	VirtualGyro.cpp
	TestTricycle.cpp
	pGNUPlot.cpp
	stdafx.cpp
)
ELSE(WIN32)
ADD_EXECUTABLE(Tricycle
	main.cpp
	Tricycle.cpp
	VirtualGyro.cpp
	TestTricycle.cpp
)
ENDIF(WIN32)

SET_TARGET_PROPERTIES(Tricycle
	PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
)
